# zero2prod

./: .env  Cargo.toml  README.md
.github/workflows/: audit.yml  general.yml
.sqlx/: query-3558b8f120bbeba62eef38128a56a550de1b5cb0e7b30cf490a0a2f9e88d1421.json
migrations/: 20260529091556_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: greet.rs  health_check.rs  subscriptions.rs
tests/: health_check.rs
