[package]
name = "zero2prod"
version = "0.1.0"
authors = [
    "Luca Palmieri <contact@lpalmieri.com>",
    "Hariharan Narayanan <enhariharan@gmail.com>",
]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = {  version = "0.4.44", default-features = false, features = ["clock"] }
env_logger = "0.11"
log = "0.4"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13"